[package]
name = "moonwalk"
version = "0.1.0"
edition = "2024"

[lib]
name = "moonwalk"
path = "src/lib.rs"

[[bin]]
name = "moonwalk"
path = "src/main.rs"

[dependencies]
# winapi = { version = "0.3", features = ["winnt", "minwindef", "memoryapi", "errhandlingapi"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 0  # Optimize for reliability
lto = false
codegen-units = 1
panic = "abort"